--- a/core/templates/core/master_schedule.html
+++ b/core/templates/core/master_schedule.html
@@ -143,7 +143,7 @@ document.addEventListener('DOMContentLoaded', function() {
     
     async function fetchScheduleData() {
         try {
-            const response = await fetch('/api/master-schedule/');
+            const response = await fetch('/api/v1/schedule/master/');
             scheduleData = await response.json();
             updateStats();
             renderGantt();
