--- a/core/templates/core/project_overview.html
+++ b/core/templates/core/project_overview.html
@@ -520,6 +520,10 @@
         <i class="bi bi-wallet2"></i>
         <span class="nav-text">{% trans "Budget" %}</span>
       </a>
+      <a href="{% url 'budget_lines' project.id %}" class="nav-item">
+        <i class="bi bi-list-columns"></i>
+        <span class="nav-text">{% trans "Budget Lines" %}</span>
+      </a>
       <a href="{% url 'expense_list' %}?project={{ project.id }}" class="nav-item">
         <i class="bi bi-cash-stack"></i>
         <span class="nav-text">{% trans "Expenses" %}</span>
